# StochasticSimulator

./: .gitignore  CMakeLists.txt  README.md  general_functions.cpp  general_functions.hpp
bsg/: fault_injector.cpp  lfsr.cpp  lfsr.hpp  sng.cpp  sng.hpp
keepdata/Multiplier Data/: multiplier_accuracy_trials.csv
modules/: adder.cpp  adder.hpp  divider.cpp  divider.hpp  multiplier.cpp  multiplier.hpp
tests/: fault_tests.cpp
tests/Functional Tests/: csv_divider_trial_early_termination_tester.m  csv_multiplier_trial_early_termination_tester.m  cvv_single_trial_early_termination_tester.m  divider_initilization_comparison.m  early_termination_tests.cpp  early_termination_tests.hpp  fault_tests.cpp  fault_tests.hpp  test_dividers_accuracy.cpp  test_multiplier_accuracy.cpp
tests/Unit Tests/: test_adders.cpp  test_dividers.cpp  test_multipliers.cpp
